--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
+    "morgan": "^1.9.1",
     "node": "^13.1.0",
     "nodemon": "^2.0.1"
   }
