--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "ESJ-and-Cloudianary",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "server": "node server.js"
   },
   "repository": {
     "type": "git",
