--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cloudinary": "^1.17.0",
     "connect-multiparty": "^2.2.0",
     "ejs": "^3.0.1",
+    "ejs-lint": "^0.3.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
